--- a/hw_2/README
+++ b/hw_2/README
@@ -1,5 +1,5 @@
 Question 0 is answered in q0.pdf and the plot is included there.
 
-Question 1 is in ReplicatePlotBokeh.ipynb.
+Question 1 is in ReplicatePlotBokeh.ipynb, and the file is phi_field.html.
 
 Question 2 is in stocks.ipynb, and the plot is my_stocks.png.
