Monty is up and running in hw_3

--- a/hw_3/hw3.ipynb
+++ b/hw_3/hw3.ipynb
@@ -95,7 +95,7 @@
     "# I did not write this, but it is to go from speech to text.\n",
     "\n",
     "# To get this to work, must set environment properly in shell. Open jupyter notebook from the same folder!\n",
-    "# export GOOGLE_APPLICATION_CREDENTIALS=\"./MyFirstProject-c5d149b85549.json\"\n",
+    "# export GOOGLE_APPLICATION_CREDENTIALS=\"./MyFirstProject-c5d149b85549.json\", or your credentials.\n",
     "\n",
     "# Return a string of the transcript\n",
     "def transcribe_file(speech_file):\n",
