Trimmed catalog and separated dask implementation to da_analysis.py

--- a/final_project/Troubleshoot.ipynb
+++ b/final_project/Troubleshoot.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DO NOT RUN THIS. I changed the catalog to make it smaller to check into git, and now it only includes the 724 halos as opposed to all of them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
