Made some corrections to notebooks and added a da_analysis file

--- a/final_project/Testing.ipynb
+++ b/final_project/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext line_profiler"
    ]
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,26 +713,31 @@
     "        returns mWHIM, mCond, mDif, mHalo.\n",
     "    '''\n",
     "    # Calculate necessary means:\n",
-    "    brho_avg = rho.mean()\n",
+    "    brho_avg = rho.mean().compute()\n",
     "    bmass = brho_avg*bl**3 # bl**3 is volume of box.\n",
     "    \n",
-    "    rhoWHIM = rho[(rho<rhoMax) & (temp<tMin)]\n",
-    "    rhoCond = rho[(rho>rhoMax) & (temp>tMin)]\n",
-    "    rhoDif = rho[(rho<rhoMax) & (temp<tMin)]\n",
-    "    rhoHalo = rho[(rho>rhoMax) & (temp>tMin)]\n",
+    "    rho_args = rho<rhoMax\n",
+    "    t_args = temp>tMin\n",
+    "    \n",
+    "    rhoWHIM = rho[rho_args & t_args]\n",
+    "    rhoCond = rho[~rho_args & ~t_args]\n",
+    "    rhoDif = rho[rho_args & ~t_args]\n",
+    "    rhoHalo = rho[~rho_args & t_args]\n",
+    "    \n",
+    "    del rho_args, t_args\n",
     "\n",
     "    # Now calculate the amount of mass in each fraction.\n",
-    "    mWHIM = (rhoWHIM.sum()/bmass).compute()\n",
-    "    mCond = (rhoCond.sum()/bmass).compute()\n",
-    "    mDif = (rhoDif.sum()/bmass).compute()\n",
-    "    mHalo = (rhoHalo.sum()/bmass).compute()\n",
+    "    mWHIM = rhoWHIM.sum().compute()/bmass\n",
+    "    mCond = rhoCond.sum().compute()/bmass\n",
+    "    mDif = rhoDif.sum().compute()/bmass\n",
+    "    mHalo = rhoHalo.sum().compute()/bmass\n",
     "\n",
     "    return mWHIM, mCond, mDif, mHalo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,14 +749,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.45 s ± 53.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.32 s ± 24 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -828,15 +842,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.04 s, sys: 208 ms, total: 2.25 s\n",
-      "Wall time: 2.16 s\n"
+      "CPU times: user 1.95 s, sys: 210 ms, total: 2.16 s\n",
+      "Wall time: 2.04 s\n"
      ]
     }
    ],
@@ -857,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
