Added file to get iso82 data

--- a/final_project/WHIM_Plot_4096.ipynb
+++ b/final_project/WHIM_Plot_4096.ipynb
@@ -1294,6 +1294,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.array([0,1,2,3,4,5])\n",
+    "ID138 = np.array([2,4])\n",
+    "args = [int(np.argwhere(test==ID)) for ID in ID138]\n",
+    "print(test[args])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
